Adaugare a doua persoana, comparare.

--- a/index.html
+++ b/index.html
@@ -10,22 +10,41 @@
 
 <body>
 
-  <h4>Calculator BMI</h4>
-  <form class='form'>
-    <label>Inaltime (cm)</label>
-    <input class='inputInaltime' type='number'>
+  <h2>Calculator BMI</h2>
+  <h3>Persoană I</h3>
+  <form class='form1'>
+    <label>Inălțime (cm)</label>
+    <input class='inputInaltime1' type='number'>
     <p><label>Greutate (kg)</label>
-      <input class='inputGreutate' type='number'>
+      <input class='inputGreutate1' type='number'>
     </p>
-    <p><label>Anul nasterii</label>
-      <input class='inputAn' type='number'>
+    <p><label>Anul nașterii</label>
+      <input class='inputAn1' type='number'>
     </p>
   </form>
-  <button class='verify'>Calculeaza BMI</button>
-  <button class='verifyAge'>Calculeaza varsta</button>
-  <p class='clasaBMI'></p>
-  <p class='clasaVarsta'></p>
+  <button class='verify1'>Calculează BMI</button>
+  <button class='verifyAge1'>Calculează vârsta</button>
+  <p class='clasaBMI1'></p>
+  <p class='clasaVarsta1'></p>
 
+  <h3>Persoană II</h3>
+  <form class='form2'>
+    <label>Inălțime (cm)</label>
+    <input class='inputInaltime2' type='number'>
+    <p><label>Greutate (kg)</label>
+      <input class='inputGreutate2' type='number'>
+    </p>
+    <p><label>Anul nașterii</label>
+      <input class='inputAn2' type='number'>
+    </p>
+  </form>
+  <button class='verify2'>Calculeaza BMI</button>
+  <button class='verifyAge2'>Calculează vârsta</button>
+  <p class='clasaBMI2'></p>
+  <p class='clasaVarsta2'></p>
+
+  <button class='compara'>Compară BMI</button>
+  <p class='clasaCompara'></p>
 
 
   <script src="script.js"></script>
