--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
   <meta name="viewport" content="width=device-width">
   <title>Proiect BMI</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
 
   <h2>Calculator BMI</h2>
+<table>
+  <tr>
+    <td>
+<div class='person1'>
   <h3>Persoană I</h3>
   <form class='form1'>
-    <label>Inălțime (cm)</label>
+    <label>Înălțime (cm)</label>
     <input class='inputInaltime1' type='number'>
     <p><label>Greutate (kg)</label>
       <input class='inputGreutate1' type='number'>
@@ -26,10 +31,19 @@
   <button class='verifyAge1'>Calculează vârsta</button>
   <p class='clasaBMI1'></p>
   <p class='clasaVarsta1'></p>
+</div>
+</td>
 
+<td>
+<button class='compara'>Compară BMI</button>
+<p class='clasaCompara'></p>
+</td>
+
+<td>
+<div class='person2'>
   <h3>Persoană II</h3>
   <form class='form2'>
-    <label>Inălțime (cm)</label>
+    <label>Înălțime (cm)</label>
     <input class='inputInaltime2' type='number'>
     <p><label>Greutate (kg)</label>
       <input class='inputGreutate2' type='number'>
@@ -42,9 +56,11 @@
   <button class='verifyAge2'>Calculează vârsta</button>
   <p class='clasaBMI2'></p>
   <p class='clasaVarsta2'></p>
+  </div>
+</td>
+</tr>
+</table>
 
-  <button class='compara'>Compară BMI</button>
-  <p class='clasaCompara'></p>
 
 
   <script src="script.js"></script>
