--- a/index.html
+++ b/index.html
@@ -11,40 +11,48 @@
 
 <body>
 
-  <h2>Calculator BMI</h2>
-<table>
-  <tr>
-    <td>
-<div class='person1'>
+  <h2 class='titlu'>Calculator BMI</h2>
+
+<div class='container text-center'>
+  <div class='row'>
+
+  <div class='col-sm-12 col-md-4 col-lg-4'>
+  <div class='person1'>  
   <h3>Persoană I</h3>
   <form class='form1'>
-    <label>Înălțime (cm)</label>
+    <p><label>Înălțime (m)</label>
     <input class='inputInaltime1' type='number'>
+  </p>
     <p><label>Greutate (kg)</label>
       <input class='inputGreutate1' type='number'>
     </p>
-    <p><label>Anul nașterii</label>
+
+  <p>
+      <label>Anul nașterii</label>
       <input class='inputAn1' type='number'>
-    </p>
+  </p>
   </form>
+
+  
   <button class='verify1'>Calculează BMI</button>
   <button class='verifyAge1'>Calculează vârsta</button>
   <p class='clasaBMI1'></p>
   <p class='clasaVarsta1'></p>
 </div>
-</td>
+</div>
 
-<td>
+<div class='col-sm-12 col-md-4 col-lg-4 align-self-center'>
 <button class='compara'>Compară BMI</button>
 <p class='clasaCompara'></p>
-</td>
+</div>
 
-<td>
+<div class='col-sm-12 col-md-4 col-lg-4'>
 <div class='person2'>
   <h3>Persoană II</h3>
   <form class='form2'>
-    <label>Înălțime (cm)</label>
+    <p><label>Înălțime (m)</label>
     <input class='inputInaltime2' type='number'>
+    </p>
     <p><label>Greutate (kg)</label>
       <input class='inputGreutate2' type='number'>
     </p>
@@ -52,14 +60,15 @@
       <input class='inputAn2' type='number'>
     </p>
   </form>
-  <button class='verify2'>Calculeaza BMI</button>
+  <button class='verify2'>Calculează BMI</button>
   <button class='verifyAge2'>Calculează vârsta</button>
   <p class='clasaBMI2'></p>
   <p class='clasaVarsta2'></p>
   </div>
-</td>
-</tr>
-</table>
+  </div>
+
+</div>
+</div>
 
 
 
