--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
+<body class='tot'>
 
   <h2 class='titlu'>Calculator BMI</h2>
 
 <div class='container text-center'>
   <div class='row'>
 
-  <div class='col-sm-12 col-md-4 col-lg-4'>
+  <div class='col-sm-12 col-md-5 col-lg-4'>
   <div class='person1'>  
   <h3>Persoană I</h3>
   <form class='form1'>
@@ -26,27 +26,33 @@
     <p><label>Greutate (kg)</label>
       <input class='inputGreutate1' type='number'>
     </p>
-
   <p>
       <label>Anul nașterii</label>
       <input class='inputAn1' type='number'>
   </p>
   </form>
 
-  
+  <div class="form-check form-check-inline form-check-reverse">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+    <label class="form-check-label" for="inlineRadio1">Feminin</label>
+  </div>
+  <div class="form-check form-check-inline form-check-reverse">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+    <label class="form-check-label" for="inlineRadio2">Masculin</label>
+  </div>
+  </div>
   <button class='verify1'>Calculează BMI</button>
   <button class='verifyAge1'>Calculează vârsta</button>
   <p class='clasaBMI1'></p>
   <p class='clasaVarsta1'></p>
 </div>
-</div>
 
-<div class='col-sm-12 col-md-4 col-lg-4 align-self-center'>
+<div class='col-sm-12 col-md-2 col-lg-4 align-self-center'>
 <button class='compara'>Compară BMI</button>
 <p class='clasaCompara'></p>
 </div>
 
-<div class='col-sm-12 col-md-4 col-lg-4'>
+<div class='col-sm-12 col-md-5 col-lg-4'>
 <div class='person2'>
   <h3>Persoană II</h3>
   <form class='form2'>
@@ -60,11 +66,19 @@
       <input class='inputAn2' type='number'>
     </p>
   </form>
+<div class="form-check form-check-inline form-check-reverse">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">Feminin</label>
+</div>
+<div class="form-check form-check-inline form-check-reverse">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">Masculin</label>
+</div>
+</div>
   <button class='verify2'>Calculează BMI</button>
   <button class='verifyAge2'>Calculează vârsta</button>
   <p class='clasaBMI2'></p>
   <p class='clasaVarsta2'></p>
-  </div>
   </div>
 
 </div>
